# Vibe-Todo-Application

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-ci.yml
cli/: main.py
cli/commands/: add.py  delete.py  get.py  list.py  update.py
cli/dependencies/: dependencies.py
core/: entities.py  interfaces.py  json_repository.py  repository.py  use_cases.py
docs/: create-prd.mdc  generate-tasks.mdc
docs/tasks/: PRD.md  TASKS.md
tests/: test_core.py
web/: main.py
web/api/: routes.py
web/dependencies/: dependencies.py
web/schemas/: models.py
