[project]
name = "todo-app"
version = "0.1.0"
description = "A Python-based Todo application with web and CLI interfaces."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "pydantic>=2.10.6",
    "rich>=14.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages]
find = {}

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "uvicorn>=0.34.3",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"] # Extend with desired lint rules

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "PD"]
"web/*.py" = ["D", "PD"]
"cli/*.py" = ["D", "PD"]
"**/__init__.py" = ["D", "PD"]
"**/*.py" = ["D100"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
